samples/_failures_safe/1761307547_1f3672_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a8abb53.c: In function ‘main’:
./samples/SAFE/__tmp_4a8abb53.c:152:16: error: missing terminating " character
  152 |         printf("4. Transpose Matrix B\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4a8abb53.c:152:9: error: expected expression at end of input
  152 |         printf("4. Transpose Matrix B\n
      |         ^~~~~~
./samples/SAFE/__tmp_4a8abb53.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4a8abb53.c:152:9: error: expected declaration or statement at end of input
